welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
var cpt=0
override def run() {
  setPos(0,0)
  var x:Int=0
  var y:Int=0
  do {
    avance()
    cpt+=1
    ecritMessage()
  }
  
}